# minister-nfce

./: .gitignore  README.md  build.py  main.spec  nfce.db  pyproject.toml
minister_nfce/: customer_form.ui  database.py  demo.py  emitir_nfce.ui  main.py  main.ui  main_window.ui  nfce_form.ui  nfce_template.html  nfe_generator.py  product_form.ui  relatorio.py  report_generator.py  ui_loader.py
