[tool.poetry]
name = "minister-nfce"
version = "0.1.0"
description = ""
authors = ["Guto Marcicano <caugmar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pynfe = "^0.4.4"
pyside6 = "^6.8.0.2"
weasyprint = "^62.3"
chevron = "^0.14.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.0"
ipython = "^8.29.0"
pybuilder = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
